Adding to the overview section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8 Little Five Points Case Study">
+  <meta charset="utf-8 Covid Crusher Case Study">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!--CSS Kits-->
@@ -121,7 +121,7 @@
         <div class="row">
           <div class="col-md-12">
             <h1>
-              Georgia COVID Crusher 
+              Georgia COVID Crusher
               <br>Mobile Notification App
             </h1>
           </div>
@@ -131,20 +131,20 @@
         <div class="row">
           <div class="col-md-4 ml-auto order-6">
             <div class="card protoVisuals1">
-              <img src="../Little_Five_Points/images/desktopScreenTitle.png" class="card-img-top"
-                alt="View of the high-fidelity version of the desktop" class="img-thumbnail">
+              <img src="../COVID_Crushers/images/ccLogo.png" class="card-img-top" alt="Georgia Covid Crusher logo"
+                class="img-thumbnail">
             </div>
             <br>
           </div>
           <div class="col-md-4 mr-auto order-8">
             <div class="card protoVisuals2">
-              <img src="../Little_Five_Points/images/L5PCAClogo.png" class="card-img-top"
-                alt="View of the updated logo for the Little Five Points Center" class="img-thumbnail">
+              <img src="../COVID_Crushers/images/ccMobile1.png" class="card-img-top"
+                alt="View of the high-fidelity version of the mobile" class="img-thumbnail">
             </div>
           </div>
           <div class="col-md-4 order-7">
             <div class="card protoVisuals3">
-              <img src="../Little_Five_Points/images/mobileScreenTitle.png" class="card-img-top"
+              <img src="../COVID_Crushers/images/ccMobile2.png" class="card-img-top"
                 alt="View of the high-fidelity version of the mobile" class="img-thumbnail">
             </div>
             <br>
@@ -214,7 +214,7 @@
                 <p class="contentTitle">
                   Timeline:
                   <span class="contentContent">
-                    March - April 2021
+                    January - February 2021
                   </span>
                 </p>
               </div>
@@ -225,11 +225,11 @@
                   Team:
                   <br>
                   <span class="contentContent">
-                    Alyssa Terry - UX/UI Designer
+                    Leanna Abraham - UX/UI Designer
                   </span>
                   <br>
                   <span class="contentContent">
-                    Micah Stokes - UX/UI Designer
+                    Nick Duncan - UX/UI Designer
                   </span>
                   <br>
                   <span class="contentContent">
@@ -245,7 +245,7 @@
                 <p class="contentTitle">
                   Project Type:
                   <span class="contentContent">
-                    Responsive Web Design
+                    Mobile Web Design
                   </span>
                 </p>
               </div>
@@ -255,7 +255,7 @@
                 <p class="contentTitle">
                   My Role:
                   <span class="contentContent">
-                    User Research, Sketches, Wireframing, & Prototyping
+                    User Research, User Flow, Project Management, Wireframing, & Prototyping
                   </span>
                 </p>
               </div>
@@ -281,24 +281,14 @@
               Objectives
             </h3>
             <div class="maxWidth">
-              <p>Little Five Points Center for Arts & Community, better known as either L5PCAC or the Center, is a
-                non
-                profit
-                center that resides within Atlanta’s Little Five Points community. Their main objective is to house
-                local
-                nonprofits and assist in their long-term growth; their website was designed to provide information
-                about the
-                community, rental services within their facilities, and tenant partnerships. However, the website
-                has
-                not been
-                maintained in places, resulting in a lack of clarity that confuses and overwhelmes users. This team
-                has taken
-                on the task of bringing the nonprofit’s online presence into 2021.
-                How might we improve the L5PCAC web presence so that users are more likely to use the community
-                center
-                based
-                on return visits to the site, increased donations, and increased financial gains through property
-                rentals?</p>
+              <p>As the Covid-19 virus overtook the world, many people found themselves worried and fearful for their
+                and their loved ones' lives. The race for a vaccine to alleviate the illness began immediately, and
+                people anxiously waited to get their hands on one. At the time that this project was in the works, there
+                were not enough vaccines to go around. Our team wanted to focus on providing vaccine information to
+                those in the state of Georgia where we live as various states provide such a feature that Georgia was,
+                at the time, lacking. Our app seeks to ease the process of determining whether vaccines are available in
+                the vicinity of people and where they can register to get one.
+              </p>
             </div>
           </div>
         </div>
