Adding content; changed photos and colors up to competitor analysis

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
               <div class="col-xl-4">
                 <div class="card protoVisuals processTiles3">
                   <div class="card-body">
-                    <h5 class="card-title2">Ideate</h5>
-                    <p class="card-text2">User Flow, Card Sorting</p>
+                    <h5 class="card-title1">Ideate</h5>
+                    <p class="card-text1">User Flow, Card Sorting</p>
                     <br>
                   </div>
                 </div>
@@ -350,8 +350,8 @@
               <div class="col-xl-4">
                 <div class="card protoVisuals processTiles3">
                   <div class="card-body">
-                    <h5 class="card-title2">Style</h5>
-                    <p class="card-text2">Style Guide, High-Fidelity Prototype</p>
+                    <h5 class="card-title1">Style</h5>
+                    <p class="card-text1">Style Guide, High-Fidelity Prototype</p>
                     <br>
                   </div>
                 </div>
@@ -383,13 +383,15 @@
                   User Research
                 </h3>
                 <div class="maxWidth">
-                  <p>Each team member had family and friends look over the current website
-                    to determine features that needed updating; these users found the navigation to be cluttered
-                    with outdated information lining the pages, an odd color scheme, and private information on the
-                    organization's public calendar. Our point of contacts at the nonprofit kindly sent
-                    us updated information not found on the site, as well as multimedia to incorporate into
-                    the mobile and desktop prototypes. We researched the area of Little Five Points and
-                    found inspiration that later helped shape the new logo, typography, and color selection.</p>
+                  <p>We started researching users that this app would benefit, namely anyone who would be eligible to
+                    receive a Covid-19 vaccine within the next few months. Between a Google Form survey, four user
+                    interviews, and information gathered from social media and the news, we quickly pulled together
+                    features that people were looking for to alleviate the lack of communication about vaccines. 
+                    In a perfect world, users wanted an app that would state who was eligible for the vaccine, with 
+                    information about the different vaccines offered (Pfizer, Moderna, Johnson & Johnson), and ways 
+                    to search for and be notified of vaccine availability at nearby venues. This was extremely important
+                    at the time because, according to the 21 surveys we received, over 90% of these users had not been 
+                    inoculated against the virus by means of a vaccine yet.</p>
                 </div>
               </div>
             </div>
@@ -405,10 +407,10 @@
                   </div>
                   <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                      <p>“It's like an edgy teenagers, early 2000s, website on the dark web. But in terms of usability,
-                        [pieces of the website are] not just useless, but actually kind of adorable in how useless they
-                        are.”</p>
-                      <footer class="blockquote-footer">Tucker, <cite title="Source Title">User</cite></footer>
+                      <p>“It was very difficult to get vaccine information. Every time I registered with Kroger or
+                        Publix, there were no timeslots free. The health department finally called me 20 days later and
+                        got me on the schedule.”</p>
+                      <footer class="blockquote-footer">Beverly, <cite title="Source Title">User</cite></footer>
                     </blockquote>
                   </div>
                 </div>
@@ -422,12 +424,11 @@
                   </div>
                   <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                      <p>"[The website] looks like somebody who was like, 'yeah, I can design a web page', so it just
-                        looks very
-                        basic; not anything that I would definitely be wowed by by any means." </p>
-                      <footer class="blockquote-footer">Nathan, <cite title="Source Title">User</cite></footer>
+                      <p>"I was vaccinated because of my job. However, I think it's hard for people not necessarily
+                        familiar with getting different health information. I think it can be really confusing with lots
+                        of mixed messages coming out about vaccine supplies." </p>
+                      <footer class="blockquote-footer">Sarah, <cite title="Source Title">User</cite></footer>
                     </blockquote>
-                    <br>
                   </div>
                 </div>
                 <br>
@@ -441,15 +442,14 @@
               <div class="col-lg-6">
                 <div class="card">
                   <div class="card-header">
-                    Stakeholder Quote
+                    User Quote
                   </div>
                   <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                      <p>"The current website that we have, the L5PCC.org, is not really reflective of our brand. We
-                        [also]
-                        wanted to kind of pick up traffic and so, I feel like our website is really sending a mixed
-                        signal or mixed message."</p>
-                      <footer class="blockquote-footer">Jalen, <cite title="Source Title">L5PCAC Office Manager</cite>
+                      <p>"The vaccine is difficult to track because you don't know who has it. It comes in, it's
+                        used, and it runs out. By the time we find out that they're scheduling appointments, there
+                        aren't any appointments left."</p>
+                      <footer class="blockquote-footer">David, <cite title="Source Title">User</cite>
                       </footer>
                     </blockquote>
                   </div>
@@ -463,12 +463,11 @@
                   </div>
                   <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                      <p>"There are too many menu options, the videos are very small to see properly, and why are there
-                        pictures of logos everywhere?"</p>
-                      <footer class="blockquote-footer">Shari, <cite title="Source Title">User</cite></footer>
+                      <p>"We don't get a choice [to take the vaccine]; work is procuring the vaccines for us. I think
+                        it's the Moderna one, but I couldn't tell you. They're getting one for everyone quickly [because
+                        we work in the energy sector]."</p>
+                      <footer class="blockquote-footer">Lauren, <cite title="Source Title">User</cite></footer>
                     </blockquote>
-                    <br>
-                    <br>
                   </div>
                 </div>
               </div>
@@ -486,14 +485,7 @@
                   Competitive Analysis
                 </h3>
                 <div class="maxWidth">
-                  <p>We looked at other companies nearby that would rent out space or offer events to the public,
-                    including theatre companies (Horizon Theatre) and other community centers (Cabbagetown &
-                    Alpharetta).
-                    Of course, the Horizon Theatre Company is located onsite and is a tenant partner, but we only
-                    learned
-                    that with digging. The other centers had similar amenities (seating, parking, wifi), with outdoor
-                    areas
-                    to host sporting events and camps.</p>
+                  <p>Of the five direct competitors and two indirect </p>
                 </div>
               </div>
             </div>
@@ -1301,7 +1293,7 @@
                     </p>
                   </div>
                   <a class="btn btn-primary btn-lg btn-floating projectLinks shadow-sm rounded" type="button"
-                    href="#">Learn More</a>
+                    href="https://srhembree.github.io/Little_Five_Points/">Learn More</a>
                 </div>
                 <br>
               </div>
