Updated the nav & added up to user persona picture (not content)

--- a/index.html
+++ b/index.html
@@ -32,50 +32,51 @@
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom" id="topoftheworld">
     <a class="navbar-brand d-lg-none" href="#"></a>
     <div class="container-fluid savingThrow">
-      <a class="navbar-brand" href="">
-        <img src="../Portfolio_Home/images/Personal Logo.png" width="110" height="75"
-          alt="Sydney Hembree personal logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto p-2">
-          <li class="dropdown show rounded nav-item mt-4">
-            <a class="btn button nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Work
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-link" href="#">Georgia COVID Crusher Mobile App</a>
-              <a class="dropdown-item nav-link" href="#">Department of Energy UI Redesign</a>
-              <a class="dropdown-item nav-link" href="https://srhembree.github.io/Little_Five_Points/">Little Five
-                Points Center Redesign</a>
-              <a class="dropdown-item nav-link" href="https://srhembree.github.io/Streams_of_Sound/">Streams of Sound FE
-                Development</a>
-              <a class="dropdown-item nav-link" href="#">Daily UI Challenges</a>
-            </div>
-          </li>
-          <li class="dropdown show rounded nav-item mt-4">
-            <a class="btn button nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Play
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-link" href="#">Photography</a>
-              <a class="dropdown-item nav-link" href="#">Illustrations</a>
-            </div>
-          </li>
-          <li class="show rounded nav-item mt-4">
-            <a class="btn button nav-link" id="dropdownMenuLink" role="button" href="#">About</a>
-          </li>
-          <li class="show rounded nav-item mt-4" action="images/Resume2021.pdf">
-            <a class="btn button nav-link" id="dropdownMenuLink" role="button"
-              href="../Portfolio_Home/images/Resume2021.pdf">Resume</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="">
+            <img src="../Portfolio_Home/images/Personal Logo.png" width="110" height="75"
+                alt="Sydney Hembree personal logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto p-2">
+                <li class="dropdown show rounded nav-item mt-4">
+                    <a class="btn button nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Work
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item nav-link" href="#">Georgia COVID Crusher Mobile App</a>
+                        <a class="dropdown-item nav-link" href="#">Department of Energy UI Redesign</a>
+                        <a class="dropdown-item nav-link"
+                            href="https://srhembree.github.io/Little_Five_Points/">Little Five
+                            Points Center Redesign</a>
+                        <a class="dropdown-item nav-link"
+                            href="https://srhembree.github.io/Streams_of_Sound/">Streams of Sound FE
+                            Development</a>
+                    </div>
+                </li>
+                <li class="dropdown show rounded nav-item mt-4">
+                    <a class="btn button nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Play
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item nav-link" href="#">Daily UI Challenges</a>
+                        <a class="dropdown-item nav-link" href="#">Photography</a>
+                    </div>
+                </li>
+                <li class="show rounded nav-item mt-4">
+                    <a class="btn button nav-link" id="dropdownMenuLink" role="button" href="#">About</a>
+                </li>
+                <li class="show rounded nav-item mt-4" action="images/Resume2021.pdf">
+                    <a class="btn button nav-link" id="dropdownMenuLink" role="button"
+                        href="../Portfolio_Home/images/Resume2021.pdf">Resume</a>
+                </li>
+            </ul>
+        </div>
     </div>
   </nav>
   <div class="toc toc-none toc-display" id="tableOfContents">
@@ -500,11 +501,20 @@
                     Direct Competitors
                   </div>
                   <div class="card-body competitorAnalysis">
-                    <img src="images/competitor1.png" alt="Horizon Theatre Company Logo">
-                    <img src="images/competitor2.png" alt="Cabbagetown Logo">
+                    <img src="images/publix.png" alt="Publix Logo">
+                    <br>
+                    <br>
+                    <img src="images/georgiaDeptofHealth.png" alt="Georgia Department of Health Logo">
+                    <br>
+                    <br>
+                    <img src="images/wellstar.png" alt="WellStar Logo">
+                    <br>
+                    <br>
+                    <img src="images/CDC.png" alt="CDC Logo">
+                    <br>
+                    <img src="images/walgreens.png" alt="Walgreens Logo">
                   </div>
                 </div>
-                <br>
               </div>
               <div class="col-lg-6">
                 <div class="card">
@@ -513,7 +523,9 @@
                   </div>
                   <div class="card-body competitorAnalysis">
                     <br>
-                    <img src="images/competitor4.png" alt="Arts Xchange Logo">
+                    <img src="images/covidWise.png" alt="Virginia's Covidwise App">
+                    <br>
+                    <img src="images/rhodeIslandCrushCovid.png" alt="Rhode Island's Crush Covid App">
                     <br>
                     <br>
                   </div>
@@ -601,21 +613,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="card">
-                  <img class="img-responsive" src="images/LaQueesha Brian.png" alt="User Persona">
+                  <img class="card-img-top" src="images/Marie Johnson.png" alt="User Persona">
                 </div>
                 <br>
               </div>
               <div class="col-lg-6">
                 <div class="card">
                   <div class="card-header">
-                    LaQueesha Brian
+                    Marie Johnson
                   </div>
                   <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                      <p>Our user persona, named LaQueesha Brian, is a middle-aged woman with a growing family.
-                        She is a local fitness instructor who is searching for a space to rent to host classes.
-                        She is gravitating towards the Little Five Points Center because of what it has to offer,
-                        specifically the amenities, reasonable prices, and space.
+                      <p>
                       </p>
                     </blockquote>
                   </div>
@@ -669,21 +678,21 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/currentUserFlow1.png"
+                  <img class="card-img-top" src="images/currentUserFlow1.png"
                     alt="Navigating from the homepage to the event rental page" class="img-thumbnail">
                 </div>
                 <br>
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/currentUserFlow2.png"
+                  <img class="card-img-top" src="images/currentUserFlow2.png"
                     alt="Clicking on frequently asked questions on the event rental page" class="img-thumbnail">
                 </div>
                 <br>
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/currentUserFlow3.png"
+                  <img class="card-img-top" src="images/currentUserFlow3.png"
                     alt="Looking at the calendar from the frequently asked questions page" class="img-thumbnail">
                 </div>
                 <br>
@@ -696,7 +705,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/currentUserFlow4.png"
+                  <img class="card-img-top" src="images/currentUserFlow4.png"
                     alt="Navigating back to the event rental page from the frequently asked questions page"
                     class="img-thumbnail">
                 </div>
@@ -704,14 +713,14 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/currentUserFlow5.png"
+                  <img class="card-img-top" src="images/currentUserFlow5.png"
                     alt="Downloading the rental form from the event rental page" class="img-thumbnail">
                 </div>
                 <br>
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/currentUserFlow6.png"
+                  <img class="card-img-top" src="images/currentUserFlow6.png"
                     alt="Printing out and filling out the rental form and sending it in physically"
                     class="img-thumbnail">
                 </div>
@@ -751,7 +760,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card">
-                  <img class="img-responsive" src="images/teamBuilding.png" alt="Team working through card sorting"
+                  <img class="card-img-top" src="images/teamBuilding.png" alt="Team working through card sorting"
                     class="img-thumbnail">
                   <div class="card-footer">
                     The team working through the new site map, focusing on donors and partners.
@@ -763,7 +772,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="card">
-                      <img class="img-responsive" src="images/cardSortingHeader.png"
+                      <img class="card-img-top" src="images/cardSortingHeader.png"
                         alt="Card sorting header information" class="img-thumbnail">
                       <div class="card-footer">
                         Original header navigation tags for L5PCAC.
@@ -773,7 +782,7 @@
                   </div>
                   <div class="col-lg-6">
                     <div class="card">
-                      <img class="img-responsive" src="images/cardSortingPartnerships.png"
+                      <img class="card-img-top" src="images/cardSortingPartnerships.png"
                         alt="Card sorting partnership information" class="img-thumbnail">
                       <div class="card-footer">
                         Original header navigation tags for L5PCAC.
@@ -785,7 +794,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="card">
-                      <img class="img-responsive" src="images/siteMap.png" alt="A breakdown of the site map"
+                      <img class="card-img-top" src="images/siteMap.png" alt="A breakdown of the site map"
                         class="img-thumbnail">
                     </div>
                   </div>
@@ -839,7 +848,7 @@
                   <div class="card-header">
                     Desktop
                   </div>
-                  <img class="img-responsive imgSizing" src="images/sketches3.png" alt="Sketches for Desktop">
+                  <img class="card-img-top imgSizing" src="images/sketches3.png" alt="Sketches for Desktop">
                 </div>
                 <br>
               </div>
@@ -848,7 +857,7 @@
                   <div class="card-header">
                     Desktop #2
                   </div>
-                  <img class="img-responsive imgSizing" src="images/sketches1.png" alt="Sketches for Desktop">
+                  <img class="card-img-top imgSizing" src="images/sketches1.png" alt="Sketches for Desktop">
                 </div>
                 <br>
               </div>
@@ -857,7 +866,7 @@
                   <div class="card-header">
                     Mobile
                   </div>
-                  <img class="img-responsive imgSizing" src="images/sketches2.png" alt="Sketches for Mobile">
+                  <img class="card-img-top imgSizing" src="images/sketches2.png" alt="Sketches for Mobile">
                 </div>
               </div>
             </div>
@@ -888,7 +897,7 @@
                   <div class="card-header">
                     Desktop
                   </div>
-                  <img class="img-responsive imgSizing1" src="images/Wireframe User Flow 1.png"
+                  <img class="card-img-top imgSizing1" src="images/Wireframe User Flow 1.png"
                     alt="Lo-fi wireframe of the desktop">
                 </div>
                 <br>
@@ -898,7 +907,7 @@
                   <div class="card-header">
                     Desktop #2
                   </div>
-                  <img class="img-responsive imgSizing1" src="images/Wireframe User Flow 2.png"
+                  <img class="card-img-top imgSizing1" src="images/Wireframe User Flow 2.png"
                     alt="Second lo-fi wireframe of the desktop">
                 </div>
                 <br>
@@ -908,7 +917,7 @@
                   <div class="card-header">
                     Mobile
                   </div>
-                  <img class="img-responsive imgSizing1" src="images/Wireframe User Flow Mobile.png"
+                  <img class="card-img-top imgSizing1" src="images/Wireframe User Flow Mobile.png"
                     alt="Lo-fi wireframe of the mobile">
                 </div>
               </div>
@@ -1031,7 +1040,7 @@
                   <div class="card-header">
                     Desktop
                   </div>
-                  <img class="img-responsive" src="images/iterationOneDesktop.png" alt="First Iteration for Desktop">
+                  <img class="card-img-top" src="images/iterationOneDesktop.png" alt="First Iteration for Desktop">
                 </div>
                 <br>
               </div>
@@ -1040,7 +1049,7 @@
                   <div class="card-header">
                     Mobile
                   </div>
-                  <img class="img-responsive" src="images/iterationOneMobile.png" alt="First Iteration for Mobile">
+                  <img class="card-img-top" src="images/iterationOneMobile.png" alt="First Iteration for Mobile">
                 </div>
               </div>
             </div>
@@ -1059,7 +1068,7 @@
                   <div class="card-header">
                     Desktop
                   </div>
-                  <img class="img-responsive" src="images/iterationTwoDesktop.png" alt="Second Iteration for Desktop">
+                  <img class="card-img-top" src="images/iterationTwoDesktop.png" alt="Second Iteration for Desktop">
                 </div>
                 <br>
               </div>
@@ -1068,7 +1077,7 @@
                   <div class="card-header">
                     Mobile
                   </div>
-                  <img class="img-responsive" src="images/iterationTwoMobile.png" alt="Second Iteration for Mobile">
+                  <img class="card-img-top" src="images/iterationTwoMobile.png" alt="Second Iteration for Mobile">
                 </div>
               </div>
             </div>
@@ -1111,26 +1120,26 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="card">
-                  <img class="img-responsive" src="images/typographyStyleTile.png" alt="Typography in Style Tile">
+                  <img class="card-img-top" src="images/typographyStyleTile.png" alt="Typography in Style Tile">
                 </div>
                 <br>
               </div>
               <div class="col-lg-6">
                 <div class="card">
-                  <img class="img-responsive" src="images/colorsButtonsStyleTile.png"
+                  <img class="card-img-top" src="images/colorsButtonsStyleTile.png"
                     alt="Colors and Buttons in Style Tile">
                 </div>
                 <br>
               </div>
               <div class="col-lg-6">
                 <div class="card">
-                  <img class="img-responsive" src="images/logoStyleTile.png" alt="Logo in Style Tile">
+                  <img class="card-img-top" src="images/logoStyleTile.png" alt="Logo in Style Tile">
                 </div>
                 <br>
               </div>
               <div class="col-lg-6">
                 <div class="card">
-                  <img class="img-responsive" src="images/graphicsStyleTile.png" alt="Graphics in Style Tile">
+                  <img class="card-img-top" src="images/graphicsStyleTile.png" alt="Graphics in Style Tile">
                 </div>
               </div>
             </div>
