--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </li>
                 <li class="show rounded nav-item mt-4">
-                    <a class="btn button nav-link" id="dropdownMenuLink" role="button" href="#">About</a>
+                    <a class="btn button nav-link" id="dropdownMenuLink" role="button" href="https://srhembree.github.io/About/">About</a>
                 </li>
                 <li class="show rounded nav-item mt-4" action="images/Resume2021.pdf">
                     <a class="btn button nav-link" id="dropdownMenuLink" role="button"
