Finished covid page

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                 <div class="maxWidth">
                   <p>We conducted two rounds of user testing; four users tested our paper prototype and two tested our
                     mid-fidelity app. Feedback from these tests focused mostly on aesthetics. For example, the peach
-                    color was considered too light, our font of choice (Georgia) was hard to read in places, and drop
+                    color was considered too light, our font of choice ('Georgia') was hard to read in places, and drop
                     shadows made some unclickable icons appear clickable to users. However, we made quick work of these
                     user insights and updated the site to reflect these changes.
                   </p>
@@ -1016,7 +1016,10 @@
             <div class="row">
               <div class="col">
                 <div class="maxWidth">
-                  <p></p>
+                  <p>Through our user tests, we updated the homepage, removed most of the drop shadows, and fixed the
+                    font to be 'Open Sans'. Our color choice, peach, intentially picked for the Peach State, was altered
+                    slightly to be seen more. From a user's perspective, however, the site functioned well. We received
+                    few comments on where something was or how best to access portions of the site.</p>
                 </div>
               </div>
             </div>
@@ -1087,7 +1090,12 @@
                   Conclusion
                 </h2>
                 <div class="maxWidth">
-                  <p>
+                  <p>To conclude, our team launched this project because there was a need from the public to get
+                    COVID-19 vaccination information out quickly. Through our discussions with family and friends, we
+                    gathered user pain points that led us to creating a mobile notification app. As this three-week
+                    sprint concluded and our group went on to do other projects, the Georgia Department of Public Health
+                    launched its own app for finding and notifying Georgians of COVID vaccines nearby. All's well that
+                    ends well.
                   </p>
                 </div>
               </div>
