Fixing indirect competitive analysis pics

--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@
                   </div>
                   <div class="card-body competitorAnalysis">
                     <br>
-                    <img src="images/COVIDWise.png" alt="Virginia's COVIDwise App">
+                    <img src="images/covidWise.png" alt="Virginia's COVIDwise App">
                     <br>
-                    <img src="images/rhodeIslandCrushCOVID.png" alt="Rhode Island's Crush COVID App">
+                    <img src="images/rhodeIslandCrushCovid.png" alt="Rhode Island's Crush COVID App">
                     <br>
                     <br>
                   </div>
