Fixed lo-fi wireframe img

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                   <div class="card-header">
                     COVID-19 Info
                   </div>
-                  <img class="card-img-top imgSizing1" src="images/COVIDInfoLoFi.png"
+                  <img class="card-img-top imgSizing1" src="images/covidInfoLoFi.png"
                     alt="Second lo-fi wireframe of the desktop">
                 </div>
                 <br>
