--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-link" href="https://srhembree.github.io/COVID_Crushers/">Georgia COVID Crusher Mobile App</a>
-              <a class="dropdown-item nav-link" href="#">Department of Energy UI Redesign</a>
               <a class="dropdown-item nav-link" href="https://srhembree.github.io/Little_Five_Points/">Little Five
                 Points Center Redesign</a>
               <a class="dropdown-item nav-link" href="https://srhembree.github.io/Streams_of_Sound/">Streams of Sound FE
@@ -1128,7 +1127,7 @@
         <div class="row">
           <div class="col-md-10 ml-auto mr-auto">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <div class="card">
                   <img class="card-img-top" src="images/L5PCAC.png" alt="Little Five Points RWD Design">
                   <div class="card-body">
@@ -1143,22 +1142,7 @@
                 </div>
                 <br>
               </div>
-              <div class="col-sm-4">
-                <div class="card">
-                  <img class="card-img-top" src="images/DOE.png" alt="Department of Energy RWD Redesign">
-                  <div class="card-body">
-                    <h5 class="card-title">Department of Energy RWD Redesign</h5>
-                    <p class="card-text">While the Department of Energy has made amazing changes to its main site,
-                      the agency has ignored the searchability function entirely. With user pain points in hand,
-                      we aimed to correct this.
-                    </p>
-                  </div>
-                  <a class="btn btn-primary btn-lg btn-floating projectLinks shadow-sm rounded" type="button"
-                    href="#">Learn More</a>
-                </div>
-                <br>
-              </div>
-              <div class="col-sm-4">
+              <div class="col-md-6">
                 <div class="card">
                   <img class="card-img-top" src="images/Coding.png" alt="Streams of Sound UX/UI/FE Development">
                   <div class="card-body">
